# GunBox-Android

./: .gitignore  README.md
ExternalLibraries/: .gitignore
ExternalLibraries/FreeType2/: CMakeLists.txt
ExternalLibraries/SDL2/: CMakeLists.txt
ExternalLibraries/__cmake/: ExternalLibraries.cmake
GunBox/: .gitignore  MakeSymlink.bat
GunBox-Android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
GunBox-Android/GunBox/: build.gradle  build.gradle.kts
GunBox-Android/GunBox/src/main/: AndroidManifest.xml
GunBox-Android/GunBox/src/main/java/com/roccoormm/sdl2app/: MainActivity.java
GunBox-Android/GunBox/src/main/res/values/: strings.xml  styles.xml
GunBox-Android/buildSrc/: build.gradle.kts
GunBox-Android/buildSrc/src/main/java/: Dependencies.kt
GunBox-Android/freetype2lib/src/main/res/values/: strings.xml
GunBox-Android/gradle/wrapper/: gradle-wrapper.properties
GunBox-Android/libfreetype2/: build.gradle  build.gradle.kts
GunBox-Android/libfreetype2/src/main/: AndroidManifest.xml
GunBox-Android/libsdl2/: build.gradle  build.gradle.kts
GunBox-Android/sdl2lib/: build.gradle
